alignment fix in favs

--- a/src/components/our-favs.scss
+++ b/src/components/our-favs.scss
@@ -43,7 +43,7 @@ $screen-lg-min: 992px;
         .fav-copy{
             background: $off-white;
             display:inherit;
-            align-items: flex-start;
+            align-items: center;
             justify-content:center;
             flex-direction: column;
             height:$mobile-fav-height;
